--- a/src/app/pages/auditor/create/compliance/follow/follow.component.html
+++ b/src/app/pages/auditor/create/compliance/follow/follow.component.html
@@ -348,7 +348,7 @@
                 <lord-icon src="https://cdn.lordicon.com/gsqxdxog.json" trigger="loop"
                     colors="primary:#405189,secondary:#f06548" style="width:90px;height:90px"></lord-icon>
                 <div class="mt-4 pt-2 fs-15 mx-4 mx-sm-5">
-                    <h4>Está a punto de eliminar este registro?</h4>
+                    <h4>Está a punto de eliminar este registro</h4>
                     <p class="text-muted mx-4 mb-0">Eliminar su registro eliminará toda su información de nuestro
 sistema.</p>
                 </div>
