--- a/src/app/pages/projects/identification/identification.component.html
+++ b/src/app/pages/projects/identification/identification.component.html
@@ -288,7 +288,7 @@
                         <input type="text" class="form-control" style="width: 400px; margin-right: 30px;" placeholder="{{selectList ? 'Buscar el cuerpo legal' : 'Buscar la instalación'}}" [(ngModel)]="term2"><!--"service.searchTerm"-->
                         <i class="ri-search-line search-icon"></i>
                     </div>
-                    <div class="form-check form-switch form-check-right" style="margin-right: 50px;font-size: 20px;min-width: 180px;">
+                    <div class="form-check form-switch form-check-right" style="margin-right: 50px;font-family: 'Poppins', sans-serif;font-size:1.21875rem;min-width: 180px;">
                         <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckRightDisabled" value="true" (change)="onChangeList($event)">
                         <label class="form-check-label" for="flexSwitchCheckRightDisabled">{{selectList ? 'Cuerpos Legales' : 'Instalaciones'}}</label>
                     </div>
@@ -388,10 +388,10 @@
                                                         </div>
                                                         
                                                         <div class="col-lg-6 col">
-                                                        <p class="card-text mb-2" [style]="s.encabezado && s.encabezado.length > 250 ? 'min-height: 60px;' : 'min-height: 80px;'">{{s.encabezado ? (s.encabezado.length > 250 ? formatArticle(s.encabezado, s.id) : s.encabezado) : ''}}</p>
+                                                        <p class="card-text mb-2" [style]="s.tituloNorma && s.tituloNorma.length > 250 ? 'min-height: 60px;' : 'min-height: 80px;'">{{s.tituloNorma ? (s.tituloNorma.length > 250 ? formatNorma(s.tituloNorma, s.normaId) : s.tituloNorma) : ''}}</p>
                                                         <p class="card-text">
-                                                            <small [ngClass]="!validateIdparte(s.id) ? 'text-success' : 'text-success'" style="cursor: pointer;" *ngIf="s.encabezado && s.encabezado.length > 250 && !validatShow(s.id)" (click)="showText(s.id)"><b>Leer más</b></small>
-                                                            <small [ngClass]="!validateIdparte(s.id) ? 'text-success' : 'text-success'" style="cursor: pointer;" *ngIf="s.encabezado && s.encabezado.length > 250 && validatShow(s.id)" (click)="hideText(s.id)"><b>Ocultar texto completo</b></small>
+                                                            <small [ngClass]="!validateIdparte2(s.normaId) ? 'text-success' : 'text-success'" style="cursor: pointer;" *ngIf="s.tituloNorma && s.tituloNorma.length > 250 && !validatShow2(s.normaId)" (click)="showText2(s.normaId)"><b>Leer más</b></small>
+                                                            <small [ngClass]="!validateIdparte2(s.nomraId) ? 'text-success' : 'text-success'" style="cursor: pointer;" *ngIf="s.tituloNorma && s.tituloNorma.length > 250 && validatShow2(s.normaId)" (click)="hideText2(s.normaId)"><b>Ocultar texto completo</b></small>
                                                         </p>
                                                         </div>
                                                         
@@ -400,7 +400,7 @@
                                                                 
                                                                 <div class="col-12">
                                                                     <h5 class="mb-1">{{byCuerpo(s.normaId)}}</h5>
-                                                                    <p class="text-muted mb-0">Instalaciones</p>
+                                                                    <p class="text-muted mb-0">Instalaciones Vinculadas</p>
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -692,14 +692,44 @@
     <div class="card">  
         <div class="card-body">  
           <div class="row g-4 mb-3">
-            <div class="col-sm-auto">
+            <div class="col-sm">
                 
             </div>
-            <div class="col-sm">
-                <div class="d-flex justify-content-sm-end gap-2">
-                    <div class="search-box ms-2">
-                        <input type="text" class="form-control" style="width: 400px;" placeholder="Buscar el cuerpo legal" [(ngModel)]="term3"><!--"service.searchTerm"-->
+            <div class="col-sm-auto">
+                <div class="d-md-flex justify-content-sm-end gap-2">
+                    <div class="search-box ms-md-2 flex-shrink-0 mb-3 mb-md-0">
+                        <input type="text" class="form-control" style="width: 400px;margin-right: 39px;" placeholder="Buscar el cuerpo legal" [(ngModel)]="term3"><!--"service.searchTerm"-->
                         <i class="ri-search-line search-icon"></i>
+                    </div>
+                    
+                    <div class="dropdown card-header-dropdown float-end" ngbDropdown>
+                        <a class="text-reset dropdown-btn arrow-none" style="font-family: 'Poppins', sans-serif;font-size:1.21875rem;" href="javascript:void(0);" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" ngbDropdownToggle>
+                            <span class="text-muted"><i class="ri-settings-4-line align-middle me-1 fs-15"></i>Gestión avanzada</span>
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-end" ngbDropdownMenu>
+                            <div class="form-check form-check-primary mb-3">
+                                <input class="form-check-input" type="checkbox" value="true" id="formAtributo" (change)="setConfig('atributo', $event)">
+                                <label class="form-check-label" for="formAtributo">
+                                Atributo
+                                </label>
+                            </div>
+                            <div class="form-check form-check-primary mb-3">
+                                <input class="form-check-input" type="checkbox" value="true" id="formComponente" (change)="setConfig('componente', $event)">
+                                <label class="form-check-label" for="formComponente">
+                                Componente
+                                </label>
+                            </div>
+                            
+                            <div class="form-check form-check-primary mb-3">
+                                <input class="form-check-input" type="checkbox" value="true" id="formFase" (change)="setConfig('fase', $event)">
+                                <label class="form-check-label" for="formFase">
+                                Fase
+                                </label>
+                            </div>
+                            <!--<a class="dropdown-item" [ngClass]="validateConfig('atributo-'+g.normaId) ? 'text-success' : ''" href="javascript:void(0);" (click)="setConfig('atributo-'+g.normaId)">Atributo</a>
+                            <a class="dropdown-item" [ngClass]="validateConfig('componente-'+g.normaId) ? 'text-success' : ''" href="javascript:void(0);" (click)="setConfig('componente-'+g.normaId)">Componente</a>
+                            <a class="dropdown-item" [ngClass]="validateConfig('fase-'+g.normaId) ? 'text-success' : ''" href="javascript:void(0);" (click)="setConfig('fase-'+g.normaId)">Fase</a>-->
+                        </div>
                     </div>
                 </div>
             </div>
@@ -845,7 +875,7 @@
                                                         </div>
                                                         
                                                         
-                                                        <div class="col-xs-1 col" *ngIf="validateConfig('atributo-'+s.normaId)">
+                                                        <div class="col-xs-1 col" *ngIf="validateConfig('atributo')">
                                                             <!--<i [ngClass]="{'icon-check': s.monitoreo}" style="font-size: 30px;" class="ri-zoom-in-line"></i>-->
                                                             <button
                                                                     [ngClass]="validateAttribute('permiso',s.id, s.permiso) ? 'btn-success' :'btn-light'"
@@ -860,7 +890,7 @@
                                                                 class="btn  view-btn mb-2" style="width: 100%;" (click)="setAttribute('monitoreo',s.id)"  >Monitoreo</button>
                                                         </div>
                                                         
-                                                        <div class="col-xs-1 col" *ngIf="validateConfig('componente-'+s.normaId)">
+                                                        <div class="col-xs-1 col" *ngIf="validateConfig('componente')">
                                                             <!--<i [ngClass]="{'icon-check': s.reporte}" style="font-size: 30px;" class="ri-git-repository-line"></i>-->
                                                             <select class="form-select mb-2" name="componente">
                                                             <option value="bg-soft-success">Componente</option>
@@ -871,7 +901,7 @@
                                                                 </select>
                                                         </div>
                                                         
-                                                        <div class="col-xs-1 col" *ngIf="validateConfig('fase-'+s.normaId)">
+                                                        <div class="col-xs-1 col" *ngIf="validateConfig('fase')">
                                                             <!--<i [ngClass]="{'icon-check': s.permiso}" style="font-size: 30px;" class="ri-file-list-3-line"></i>-->
                                                             
                                                             <button
@@ -950,37 +980,6 @@
                                         <h4 class="flex-grow-1 fw-semibold mb-0" style="color: #405189;">{{g.cuerpoLegal}}
                                             <span class="float-end" style="font-size: 20px;cursor:pointer;"><i class=" ri-arrow-down-s-line" (click)="showArticles(g.normaId)" *ngIf="!validateShowArticles(g.normaId)"></i></span>
                                             <span class="float-end" style="font-size: 20px;cursor:pointer;" (click)="hideArticles(g.normaId)" *ngIf="validateShowArticles(g.normaId)"><i class=" ri-arrow-up-s-line"></i></span>
-                                            
-                                            <div class="dropdown card-header-dropdown float-end" ngbDropdown>
-                                                <a class="text-reset dropdown-btn arrow-none" href="javascript:void(0);" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" ngbDropdownToggle>
-                                                    <span class="text-muted"><i class="ri-settings-4-line align-middle me-1 fs-15"></i>Gestión avanzada</span>
-                                                </a>
-                                                <div class="dropdown-menu dropdown-menu-end" ngbDropdownMenu>
-                                                    <div class="form-check form-check-primary mb-3">
-                                                        <input class="form-check-input" type="checkbox" value="true" id="formAtributo" (change)="setConfig('atributo-'+g.normaId, $event)">
-                                                        <label class="form-check-label" for="formAtributo">
-                                                        Atributo
-                                                        </label>
-                                                    </div>
-                                                    <div class="form-check form-check-primary mb-3">
-                                                        <input class="form-check-input" type="checkbox" value="true" id="formComponente" (change)="setConfig('component-'+g.normaId, $event)">
-                                                        <label class="form-check-label" for="formComponente">
-                                                        Componente
-                                                        </label>
-                                                    </div>
-                                                    
-                                                    <div class="form-check form-check-primary mb-3">
-                                                        <input class="form-check-input" type="checkbox" value="true" id="formFase" (change)="setConfig('fase-'+g.normaId, $event)">
-                                                        <label class="form-check-label" for="formFase">
-                                                        Fase
-                                                        </label>
-                                                    </div>
-                                                    <!--<a class="dropdown-item" [ngClass]="validateConfig('atributo-'+g.normaId) ? 'text-success' : ''" href="javascript:void(0);" (click)="setConfig('atributo-'+g.normaId)">Atributo</a>
-                                                    <a class="dropdown-item" [ngClass]="validateConfig('componente-'+g.normaId) ? 'text-success' : ''" href="javascript:void(0);" (click)="setConfig('componente-'+g.normaId)">Componente</a>
-                                                    <a class="dropdown-item" [ngClass]="validateConfig('fase-'+g.normaId) ? 'text-success' : ''" href="javascript:void(0);" (click)="setConfig('fase-'+g.normaId)">Fase</a>-->
-                                                </div>
-                                            </div>
-                                            
                                         </h4>
                                         <p>{{g.organismo}}</p>
                                     <ng-container *ngIf="!validateShowArticles(g.normaId)">
@@ -1053,7 +1052,7 @@
                         class="btn view-btn mb-2" style="width: 100%;" [ngClass]="validateAttributeAll('fase', 'operacion') ? 'btn-success' :'btn-light'" (click)="setAttributeAll('fase', 'operacion')" >Operación</button>
                         
                         <button
-                                class="btn btn-light view-btn mb-2" style="width: 100%;" [ngClass]="validateAttributeAll('fase', 'cierre') ? 'btn-success' :'btn-light'" (click)="setAttributeAll('fase', 'cierre')">Cierre</button>
+                                class="btn view-btn mb-2" style="width: 100%;" [ngClass]="validateAttributeAll('fase', 'cierre') ? 'btn-success' :'btn-light'" (click)="setAttributeAll('fase', 'cierre')">Cierre</button>
                     </div>
                     <div class="col-sm-2" style="border-left: 3px solid #fff;display: grid;">
                         <button type="button" class="btn btn-primary waves-effect waves-light" style="color: #634A1F;font-family: Poppins;font-weight: 400;background-color: #fff;margin:auto;" data-bs-target="#showModal" (click)="openModal3(content3, 'multiple')">Configurar Instalaciones</button>
@@ -1240,11 +1239,11 @@
                                 <div class="d-flex mb-2">
                                     <div class="flex-grow-1">
                                         <div><h5>{{byCuerpoVinculacion(s.normaId)}}</h5></div>
-                                        <div>{{byCuerpoVinculacion(s.normaId) == 1 ? 'Artículo Aplicable' : 'Artículos Aplicables'}}</div>
+                                        <div>{{byCuerpoVinculacion(s.normaId) == 1 ? 'Artículo a gestionar' : 'Artículos a gestionar'}}</div>
                                     </div>
                                     <div class="flex-grow-1">
                                         <div><h5>{{byCuerpoVinculacion(s.normaId)}}</h5></div>
-                                        <div>{{byCuerpoVinculacion(s.normaId) == 1 ? 'Vinculación' : 'Vinculaciones'}}</div>
+                                        <div>{{byCuerpoVinculacion(s.normaId) == 1 ? 'Instalación' : 'Instalaciones'}}</div>
                                     </div>
                                 </div>
                             </div>
