--- a/src/app/pages/projects/identification/identification.component.html
+++ b/src/app/pages/projects/identification/identification.component.html
@@ -36,7 +36,7 @@
                                                 </span>
                                             </div>-->
                                             <span class="d-sm-block">
-                                                <i class="ri-truck-fill align-middle me-2" style="
+                                                <i class="ri-share-fill align-middle me-2" style="
                                                 border: 1px #c4cadc solid;
                                                 border-radius: 24px;
                                                 padding: 10px;
@@ -52,13 +52,13 @@
                                     <li [ngbNavItem]="3" class="nav-item waves-effect waves-light" [disabled]="cuerpo_installations < 1">
                                         <a ngbNavLink (click)="changeTab(3)">
                                             <span class="d-sm-block">
-                                                <i class="ri-truck-fill align-middle me-2" style="
+                                                <i class="ri-settings-5-fill align-middle me-2" style="
                                                 border: 1px #c4cadc solid;
                                                 border-radius: 24px;
                                                 padding: 10px;
                                                 background: #c4cadc;
                                             "></i>
-                                            Configura</span>
+                                            Gestiona</span>
                                         </a>
                                         <ng-template ngbNavContent>
                                             <ng-template [ngTemplateOutlet]="TabContent2"></ng-template>
@@ -67,7 +67,7 @@
                                     <li [ngbNavItem]="4" class="nav-item waves-effect waves-light" [disabled]="cuerpo_installations.length < 1">
                                         <a ngbNavLink (click)="changeTab(4)">
                                             <span class="d-sm-block">
-                                                <i class="ri-bank-card-line align-middle me-2" style="
+                                                <i class="ri-ticket-2-fill align-middle me-2" style="
                                                 border: 1px #c4cadc solid;
                                                 border-radius: 24px;
                                                 padding: 10px;
@@ -113,16 +113,16 @@
         margin-left: 30px;
         margin-right: 30px;
     ">
-            <div class="div-texto disabled">
+            <div class="div-texto" [ngClass]="{'div-texto-check texto-check': validateFilter('MA')}" (click)="setFilterAmbito('MA')">
                 Legislación ambiental
-            </div><!--[ngClass]="{'div-texto-check texto-check': validateCuerpo(c.cuerpoLegal)}" (click)="selectCuerpo(c.cuerpoLegal)"-->
+            </div>
         </div>
 
         <div class="col-xxl-2 col-lg-2" style="
         margin-left: 30px;
         margin-right: 30px;
     ">
-            <div class="div-texto disabled">
+            <div class="div-texto" [ngClass]="{'div-texto-check texto-check': validateFilter('SST')}" (click)="setFilterAmbito('SST')">
                 Legislación de Seguridad y Salud en el trabajo 
             </div>
         </div>
@@ -140,7 +140,7 @@
         margin-left: 30px;
         margin-right: 30px;
     ">
-            <div class="div-texto disabled">
+            <div class="div-texto" [ngClass]="{'div-texto-check texto-check': validateFilter('ENERGIA')}" (click)="setFilterAmbito('ENERGIA')">
                 Legislación de energía 
             </div>
         </div>
@@ -229,7 +229,7 @@
             <!-- end card body -->
         </div>
     </div>
-    <div *ngIf="!normasListWidgets || normasListWidgets.length == 0">
+    <div *ngIf="!normasListWidgets"><!-- || normasListWidgets.length == 0-->
       <!--<div style="text-align: center;width: 100%;">
           <img src="assets/images/file.png" width="300" height="200"/>
       </div>-->
@@ -243,23 +243,29 @@
 <div class="pagination justify-content-start mb-0"><!-- class="row g-0 text-center text-sm-start align-items-center mb-4" style="padding: 0px;position: fixed;bottom: 75px;width: 100%;"-->
     <div class="col-sm-7">
         <div>
-            <p class="mb-sm-0 text-muted">Mostrando página <span class="fw-semibold">1</span> de <span class="fw-semibold">{{pageTotal(pagLength)}}</span> de <span class="fw-semibold text-decoration-underline">{{pagLength}}</span> registros</p>
+            <p class="mb-sm-0 text-muted">Mostrando página <span class="fw-semibold">{{page+1}}</span> de <span class="fw-semibold">{{pageTotal(pagLength)}}</span> de <span class="fw-semibold text-decoration-underline">{{pagLength}}</span> registros</p>
         </div>
     </div>
     <!-- end col -->
     <div class="col-sm-5">
+        <!--<div class="text-sm-right float-sm-end listjs-pagination">
+            <ngb-pagination [collectionSize]="total_paginate" [(page)]="service.page"
+                [pageSize]="service.pageSize">
+            </ngb-pagination>
+        </div>-->
         <ul class="pagination pagination-separated justify-content-center justify-content-sm-end mb-sm-0">
-            <li class="page-item disabled">
-                <a href="javascript:void(0);" class="page-link">Anterior</a>
+            <li class="page-item" [ngClass]="page > 0 ? '' : 'disabled'">
+                <a href="javascript:void(0);" class="page-link"  (click)="setPage(page - 1)">Anterior</a>
             </li>
-            <li class="page-item active">
-                <a href="javascript:void(0);" class="page-link">1</a>
+
+            <ng-container *ngFor="let l of list_paginate">
+            <li class="page-item" [ngClass]="l == page ? 'active' : ''">
+                <a href="javascript:void(0);" class="page-link" (click)="setPage(l)">{{l+1}}</a>
             </li>
-            <!--<li class="page-item ">
-                <a href="javascript:void(0);" class="page-link">2</a>
-            </li>-->
-            <li class="page-item">
-                <a href="javascript:void(0);" class="page-link">Siguiente</a>
+            </ng-container>
+
+            <li class="page-item" [ngClass]="page + 1 == pageTotal(pagLength) ? 'disabled' : ''">
+                <a href="javascript:void(0);" class="page-link" (click)="setPage(page + 1)">Siguiente</a>
               </li>
           </ul>
       </div><!-- end col -->
@@ -296,14 +302,14 @@
             </div>
           </div>
 
-          <div class="row text-center text-center align-items-center mb-4 justify-content-center" *ngIf="selectList">
+          <!--<div class="row text-center text-center align-items-center mb-4 justify-content-center" *ngIf="selectList">
             <div class="col-xxl-2 col-lg-2" style="
             margin-left: 30px;
             margin-right: 30px;
         ">
                 <div class="div-texto disabled">
                     Legislación ambiental
-                </div><!--[ngClass]="{'div-texto-check texto-check': validateCuerpo(c.cuerpoLegal)}" (click)="selectCuerpo(c.cuerpoLegal)"-->
+                </div>
             </div>
     
             <div class="col-xxl-2 col-lg-2" style="
@@ -332,7 +338,7 @@
                     Legislación de energía 
                 </div>
             </div>
-        </div>
+        </div>-->
     <div class="row" *ngIf="selectList">
         <div class="col-lg-12">
             <!--<div class="card">
@@ -784,14 +790,14 @@
             </div>
         </div>-->
 
-        <div class="row text-center text-center align-items-center mb-4 justify-content-center">
+        <!--<div class="row text-center text-center align-items-center mb-4 justify-content-center">
             <div class="col-xxl-2 col-lg-2" style="
             margin-left: 30px;
             margin-right: 30px;
         ">
                 <div class="div-texto disabled">
                     Legislación ambiental
-                </div><!--[ngClass]="{'div-texto-check texto-check': validateCuerpo(c.cuerpoLegal)}" (click)="selectCuerpo(c.cuerpoLegal)"-->
+                </div>
             </div>
     
             <div class="col-xxl-2 col-lg-2" style="
@@ -820,7 +826,7 @@
                     Legislación de energía 
                 </div>
             </div>
-        </div>
+        </div>-->
 
     <div class="row">
         <div class="col-lg-12"><!--
@@ -978,8 +984,8 @@
                                     <div class="card-body">
                                         
                                         <h4 class="flex-grow-1 fw-semibold mb-0" style="color: #405189;">{{g.cuerpoLegal}}
-                                            <span class="float-end" style="font-size: 20px;cursor:pointer;"><i class=" ri-arrow-down-s-line" (click)="showArticles(g.normaId)" *ngIf="!validateShowArticles(g.normaId)"></i></span>
-                                            <span class="float-end" style="font-size: 20px;cursor:pointer;" (click)="hideArticles(g.normaId)" *ngIf="validateShowArticles(g.normaId)"><i class=" ri-arrow-up-s-line"></i></span>
+                                            <span class="float-end" style="font-size: 20px;cursor:pointer;"><i class=" ri-arrow-down-s-line" (click)="hideArticles(g.normaId)" *ngIf="!validateShowArticles(g.normaId)"></i></span>
+                                            <span class="float-end" style="font-size: 20px;cursor:pointer;" (click)="showArticles(g.normaId)" *ngIf="validateShowArticles(g.normaId)"><i class=" ri-arrow-up-s-line"></i></span>
                                         </h4>
                                         <p>{{g.organismo}}</p>
                                     <ng-container *ngIf="!validateShowArticles(g.normaId)">
@@ -1139,14 +1145,14 @@
           
           <div style="min-height: 600px;">
             
-    <div class="row text-center text-center align-items-center mb-4 justify-content-center">
+    <!--<div class="row text-center text-center align-items-center mb-4 justify-content-center">
         <div class="col-xxl-2 col-lg-2" style="
         margin-left: 30px;
         margin-right: 30px;
     ">
             <div class="div-texto disabled">
                 Legislación ambiental
-            </div><!--[ngClass]="{'div-texto-check texto-check': validateCuerpo(c.cuerpoLegal)}" (click)="selectCuerpo(c.cuerpoLegal)"-->
+            </div>
         </div>
 
         <div class="col-xxl-2 col-lg-2" style="
@@ -1175,7 +1181,7 @@
                 Legislación de energía 
             </div>
         </div>
-    </div>
+    </div>-->
 
           <div class="row">
            
@@ -1184,11 +1190,11 @@
             <div class="col-xxl-3 col-sm-6 project-card" *ngFor="let s of articles_proyects_group | filter:term4" id="pl1_{{s.normaId}}">
                 <div class="card card-height-100 ribbon-box border right" [ngClass]="{'card-border-success': validateIdCuerpo(s.normaId) == 1, 'card-border-warning': validateIdCuerpo(s.normaId) == 2, 'card-border-danger': !validateIdCuerpo(s.normaId)}">
                     <div class="card-body">
-                        <div class="ribbon ribbon-success round-shape" style="font-size: 14px;" *ngIf="validateIdCuerpo(s.normaId) == 1">Aplica</div>
+                        <div class="ribbon ribbon-success round-shape" style="font-size: 14px;" *ngIf="validateIdCuerpo(s.normaId) == 1">Gestionar</div>
 
-                        <div class="ribbon ribbon-warning round-shape" style="font-size: 14px;" *ngIf="validateIdCuerpo(s.normaId) == 2">Aplica Parcial</div>
+                        <div class="ribbon ribbon-warning round-shape" style="font-size: 14px;" *ngIf="validateIdCuerpo(s.normaId) == 2">Por definir</div>
                         
-                        <div class="ribbon ribbon-danger round-shape" style="font-size: 14px;" *ngIf="!validateIdCuerpo(s.normaId)">No Aplica</div>
+                        <div class="ribbon ribbon-danger round-shape" style="font-size: 14px;" *ngIf="!validateIdCuerpo(s.normaId)">No Gestionar</div>
 
                         <div class="d-flex flex-column h-100 text-center">
                             <div class="d-flex">
