--- a/src/app/pages/auditor/create/body-legal/detail/body-legal-detail.component.html
+++ b/src/app/pages/auditor/create/body-legal/detail/body-legal-detail.component.html
@@ -55,7 +55,7 @@
                 <span></span>
                 </span>
             </span>
-            <h6 class="card-title">{{detail.identificador ? detail.identificador.tipoNorma+' '+detail.identificador.numero : ''}} {{detail.tituloNorma ? detail.tituloNorma : ''}}</h6>
+            <h6 class="card-title">{{detail.identificador ? (detail.identificador.tipoNorma ? detail.identificador.tipoNorma+' '+detail.identificador.numero : '') : ''}} {{detail.tituloNorma ? detail.tituloNorma : ''}}</h6>
             
             <ng-container *ngFor="let org of detail.organismos">
                 <p class="card-subtitle text-muted mb-0">{{org}}</p>
