--- a/src/app/pages/projects/identification/identification.component.html
+++ b/src/app/pages/projects/identification/identification.component.html
@@ -1109,8 +1109,39 @@
                             
                             <!--<li class="list-group-item mb-3 border card-border-success"><i class="mdi mdi-check-circle align-middle lh-1 me-2 text-success"></i> {{o.nombre}}</li>
                             <li class="list-group-item mb-3"><i class="mdi mdi-alert-circle align-middle lh-1 me-2 text-warning"></i> {{o.nombre}}</li>-->
-                            <li class="list-group-item mb-3 border" style="cursor: pointer;" [ngClass]="{'card-border-success': validChecked4(o.id) == 1, 'card-border-warning': validChecked4(o.id) == 2 }" (click)="onCheckboxChange4(o.id)"><i class="mdi align-middle lh-1 me-2"  [ngClass]="{'mdi-check-circle text-success': validChecked4(o.id) == 1, 'mdi-alert-circle text-warning': validChecked4(o.id) == 2,'mdi-checkbox-blank-circle text-gray': validChecked4(o.id) == null }"></i> {{o.nombre}}</li>
-                            
+                            <li class="list-group-item mb-3 border" style="cursor: pointer;" [ngClass]="{'card-border-success': validChecked4(o.id) == 1, 'card-border-warning': validChecked4(o.id) == 2 }" >
+                                <div class="d-flex align-items-center">
+                                    <div class="flex-grow-1">
+                                    <div class="d-flex">
+                                    <div class="flex-shrink-0 avatar-xs">
+                                      <div>
+                                           <i class="mdi align-middle lh-1 me-2"  [ngClass]="{'mdi-check-circle text-success': validChecked4(o.id) == 1, 'mdi-alert-circle text-warning': validChecked4(o.id) == 2,'mdi-checkbox-blank-circle text-gray': validChecked4(o.id) == null }"></i>
+                                      </div>
+                                    </div>
+                                    <div class="flex-shrink-0 ms-2">
+                                        {{o.nombre}}
+                                    </div>
+                                    </div>
+                                    </div> 
+                                    
+                                    <div class="flex-shrink-0">
+                                        <div class="form-check form-check-inline form-radio-danger">
+                                            <input class="form-check-input" type="radio" name="{{o.id}}-estado" id="{{o.id}}-estado0" value="{{o.id}}-0" (change)="onCheckboxChange5(o.id, 0)" [checked]="validChecked4(o.id) == 0">
+                                            <label class="form-check-label" for="{{o.id}}-estado0">No gestionar</label>
+                                        </div>
+                                        <div class="form-check form-check-inline form-radio-warning">
+                                            <input class="form-check-input" type="radio" name="{{o.id}}-estado" id="{{o.id}}-estado2" value="{{o.id}}-2" (change)="onCheckboxChange5(o.id, 2)" [checked]="validChecked4(o.id) == 2">
+                                            <label class="form-check-label" for="{{o.id}}-estado2">Por Definir</label>
+                                        </div>
+                                        <div class="form-check form-check-inline form-radio-success">
+                                            <input class="form-check-input" type="radio" name="{{o.id}}-estado" id="{{o.id}}-estado1" value="{{o.id}}-1" (change)="onCheckboxChange5(o.id, 1)" [checked]="validChecked4(o.id) == 1">
+                                            <label class="form-check-label" for="{{o.id}}-estado1">Gestionar</label>
+                                        </div>
+                                    </div>
+                                
+                                </div>
+                            </li>
+                                
                     </ng-container>
                 </ul>
             </div>
