correccion contador e seleccion inicial

--- a/src/app/pages/projects/identification/identification.component.html
+++ b/src/app/pages/projects/identification/identification.component.html
@@ -214,8 +214,8 @@
                                 <div>{{byCuerpoVinculacion(data.normaId) == 1 ? 'Artículo a gestionar' : 'Artículos a gestionar'}}</div>
                             </div>
                             <div class="flex-grow-1">
-                                <div><h5>{{byCuerpoVinculacion(data.normaId)}}</h5></div>
-                                <div>{{byCuerpoVinculacion(data.normaId) == 1 ? 'Instalaión' : 'Instalaciones'}}</div>
+                                <div><h5>{{byCuerpo(data.normaId)}}</h5></div>
+                                <div>{{byCuerpo(data.normaId) == 1 ? 'Instalación' : 'Instalaciones'}}</div>
                             </div>
                         </div>
                     </div>
@@ -1279,8 +1279,8 @@
                                         <div>{{byCuerpoVinculacion(s.normaId) == 1 ? 'Artículo a gestionar' : 'Artículos a gestionar'}}</div>
                                     </div>
                                     <div class="flex-grow-1">
-                                        <div><h5>{{byCuerpoVinculacion(s.normaId)}}</h5></div>
-                                        <div>{{byCuerpoVinculacion(s.normaId) == 1 ? 'Instalación' : 'Instalaciones'}}</div>
+                                        <div><h5>{{byCuerpo(s.normaId)}}</h5></div>
+                                        <div>{{byCuerpo(s.normaId) == 1 ? 'Instalación' : 'Instalaciones'}}</div>
                                     </div>
                                 </div>
                             </div>
